--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
             <meta charset="utf-8" />
             <title> Booki</title>
            <meta name="viewport" content="width=device-width, initial-scale=1">
-            <link rel="stylesheet" href="booki2.css"/>
+            <link rel="stylesheet" href="booki.css"/>
             <link rel="stylesheet" href="css/normalize.css" />
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
